# dev-tools-collection

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  pyproject.toml
.github/workflows/: build-binaries.yml  tests.yml
src/dev_tools/project_context/: README.md  cli.py
src/dev_tools_collection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_project_context.py
